# llm-legal-kg-builder

./: .env.example  .gitignore  Diagram.drawio  LICENSE  README.md  gold-standard-test-dataset.xlsx  pyproject.toml
db-admin/: pg-backup.sh  pg-restore.sh
src/analytics/: neo4j_graph_stats.py  visualize_relations_by_layers.py  visualize_relations_by_layers_cumulative.py  visualize_relationships_evolution.py  visualize_relationships_static.py  word_count_histogram.py
src/datasets/: clean_nzlii_title_types.py  clean_nzlii_titles.py  copy_legislation_govt_data.py  copy_nzlii_data.py  deduplicate_legislations.py  indexer.py  scraper.py  text_normalization.py
src/db/: create_act_relationships_table.py  create_act_topics_table.py  create_leiden_communities_table.py  create_lost_and_found_table.py  create_re_layer_counts_table.py  create_table.py  db_connection.py
src/evaluate/: clean_evaluation_result.py  evaluate.py  evaluation.py  verify.py
src/graph/: in_out_degree_centrality.py  leiden_community_detection.py  neo4j_clean.py  neo4j_connection.py  neo4j_graph_construction.py  neo4j_graph_construction_maintained.py  weighted_page_rank.py
src/re/: act_relationship_handler.py  check_children.py  count_relationships.py  count_relationships_all.py  count_relationships_by_layers.py  count_relationships_by_layers_all.py  extractor_langextract.py  extractor_langextract_run.py  extractor_llm.py  extractor_llm_graph_builder.py  extractor_llm_graph_builder_left_behind.py  extractor_llm_run.py  extractor_llm_run_heavy.py  extractor_xml.py  fix_the_title.py  katz_centrality.py  (+9 more)
(+28 files in other folders)
